deployment/mesh-infra/argocd/projects/fdps/fdp-sync-dummy/base.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fdp-sync-dummy
  name: fdp-sync-dummy
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: fdp-sync-dummy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fdp-sync-dummy
  name: fdp-sync-dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdp-sync-dummy
  template:
    metadata:
      labels:
        app: fdp-sync-dummy
    spec:
      containers:
        - name: fdp-sync-dummy
          image: polimiis/teadal-base-fdp-sync
          ports:
          - containerPort: 8080
          env: #  Not ideal to hardcode the minio credentials, but we can't mount secrets from a different namespace so ...
          - name: MINIO_HOST
            value: "teadal-teadal-0.teadal-hl.minio-operator.svc.cluster.local"
          - name: MINIO_PORT
            value: "9000"
          - name: MINIO_ACCESS_KEY
            value: LTXG5CVY0MXLE0WO75Q6
          - name: MINIO_SECRET_KEY
            value: IKxps9GTiPGBZaK6BRmeF434lGZCNx0XG3sa4PLE
          - name: BUCKETNAME
            value: teadal
          - name: FILENAME
            value: patients-fdp.json
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: "fdp-sync-dummy-virtual-service"
spec:
  gateways:
  - "teadal-gateway"
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /fdp-sync-dummy/
    - uri:
        prefix: /fdp-sync-dummy
    rewrite:
      uri: /
    route:
    - destination:
        host: fdp-sync-dummy.default.svc.cluster.local
        port:
          number: 8080
